public/css/primary.css
:root {
    /* Colors */
    --color-primary: #182B49;
    --color-secondary: #FFCD00;
    --color-tertiary: #FC8900;
    --color-quaternary: #6E963B;
    --color-quinary: #00C6D7;

    --color-font: #000;
    --color-btn-person: #fff;

    --color-font-light: #fff;
    --color-gray: gray;
    --color-gray-light: #e8e8e8;
}

/* Animations */

* {
    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
}

body {
    position: relative;
    margin: 0 0;
}

.wrapper {
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.viewport-height {
    height: 100vh;
    height: calc(var(--vh, 1vh) * 100);
}

a {
    text-decoration: none;
    color: var(--color-font);
}

a:hover {
    color: rgb(112, 112, 112);
    cursor: pointer;
}

a:active {
    color: lightcoral;
}

a:visited {
    color: var(--color-font);
}

a.btn-person-font {
    font-size: 16px;
}

/* Main Sections */
.main-home {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--color-primary);
    height: calc(var(--vh, 1vh) * 100 * 0.1);
}

.main-middle {
    position: relative;
    overflow: hidden;
    margin-bottom: auto;
    flex-shrink: 100;
    height: calc(var(--vh, 1vh) * 100 * 0.8);
    z-index: 5;
}

.main-scroll {
    overflow-y: scroll;
    background-color: white;
    margin-bottom: auto;
    flex-shrink: 100;
    height: calc(var(--vh, 1vh) * 100 * 0.8);
    z-index: 10;
}

.main-mentors {
    background-color: var(--color-quinary);
    color: var(--color-font-light);
    text-align: center;
    text-shadow: 1px 1px 1px black;
    height: 100%;
}

nav {
    background-color: var(--color-primary);
    height: calc(var(--vh, 1vh) * 100 * 0.1);
}

nav:hover {
    cursor: pointer;
}

/* Main Buttons */
.btn-person {
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: var(--color-btn-person);    
    width: 100%;
    height: 60px;
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 0;
    border-bottom: 1px solid var(--color-gray-light);
}

.btn-mentor {
    display: flex;
    align-items: center;
    background-color: var(--color-quinary);
    padding: 10px;
    border-radius: 50%;
    height: 30px;
    width: 30px;
    position: absolute;
    bottom: 25px;
    right: 25px;
    box-shadow: 1px 1px 5px 0px gray;
    z-index: 10;
}

.btn-mentor-secondary {
    opacity: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--color-quinary);
    border-radius: 50%;
    height: 30px;
    width: 30px;
    position: absolute;
    bottom: 25px;
    right: 25px;
    z-index: 5;
}

.btn-mentor-close {
    opacity: 0;
    display: flex;
    align-items: center;
    padding: 10px;
    border-radius: 50%;
    height: 30px;
    width: 30px;
    position: absolute;
    bottom: 25px;
    right: 25px;
    z-index: 5;
}

.btn-mentor-icon {
    margin: 0 auto;
    display: block;
}

.btn-mentor-animate {
    animation-name: search-expand;
    animation-duration: 2s;
}

.btn-mentor-pair {
    display: inline-block;
    padding: 10px 20px;
    border-radius: 10px;
    background-color: var(--color-secondary);
    box-shadow: 2px 2px 6px 0px gray;
}

a.btn-mentor-pair-text {
    text-transform: uppercase;
    letter-spacing: 1px;
    text-shadow: none;
    text-decoration: none;
    color: white;
}

svg.icon-user {
    margin-left: 25px;
    margin-right: 20px;
}

svg.icon-forward {
    margin-left: auto;
    margin-right: 25px;
}

.btn-settings {
    align-self: flex-start;
    height: 20px;
    width: 10px;
}

.btn-account {
    display: flex;
    align-self: flex-start;
    height: 20px;
    width: 10px;
}

.tab {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    box-shadow: 0 -1px 20px 0px gray;
    z-index: 50;
}

.tab a {
    color: var(--color-secondary);
}

.container {
    width: 100%;
    color: black;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    background-color: white;
}

.btn-changephoto-font {
    color: black;
    justify-content: center;
    display: flex;
}

.profile-name {
    align-items: center;
    padding: 25px;
    border-radius: 40px;
    border: 2px solid var(--color-secondary);
}

.add-friend-btn
{
    justify-content: center;
    display: flex;
    padding: 25px;
    background-color: var(--color-primary);
    color: white;
    border-radius: 40px;
    
}

.profile-header
{
    color: white;
    background-color: var(--color-primary);
}

.profile-workout {
    align-items: center;
    padding: 25px;
    border-radius: 40px;
    border: 2px solid var(--color-secondary);
}

.profile-switch {
    align-items: center;
    padding: 25px;
    border-radius: 40px;
    border: 2px solid var(--color-secondary);
}

#profile-text {
    align-items: center;
    justify-content: center;
    display: flex;
}

.profile-photo {
    justify-content: center;
    align-items: center;
    display: flex;
    margin-top: 20px;
}

.profile-workout input[type="radio"]
{
    display: none;
}

.profile-workout label
{
    display: inline-block;
    border-radius: 40px;
    border: 1px solid var(--color-secondary);
    padding: 4px 11px;
    font-family: Arial;
    font-size: 16px;
    cursor: pointer;
}

.profile-workout input[type="radio"]:checked+label
{
    background-color: #bbb;
}

.logo {
    width: 50px;
    height: 50px;
}

/* Page Titles */
.header-mentor {
    background-color: var(--color-secondary);
}

.header-friends {
    background-color: var(--color-tertiary);
}

.header-profile {
    background-color: var(--color-quinary);
}

.header-settings {
    background-color: var(--color-quaternary);
}

.header-font {
    margin-left: 20px;
    text-transform: uppercase;
    letter-spacing: .5px;
    font-weight: bolder;
    color: var(--color-font-light);
}

a.header-font-mentor {
    color: var(--color-font-light);
}


/*Toggle Switch Section*/ 

.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
  }
  
  /* Hide default HTML checkbox */
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  /* The slider */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: var(--color-primary);
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px var(--color-primary);
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

